Order service logic implementation and controller mvc test